--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ body {
 .botoes{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 32px;
 }
 
 .botoes button {
@@ -70,8 +71,36 @@ body {
     border: none;
     color: var(--medium-gray);
     background-color: var(--dark-blue);
+    transition: all ease-in-out 0.3;
 }
 
 .botoes button:hover {
-    
+    color: var(--white);
+    background-color: var(--orange);
+    cursor: pointer;
+}
+
+.botoes button:focus {
+    color: var(--white);
+    background-color: var(--light-gray);
+}
+
+.card > button {
+    width: 100%;
+    padding: 13px;
+    font-size: 15px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: var(--white);
+    background-color: var(--orange);
+    border: none;
+    border-radius: 22px;
+}
+
+.card > button:hover {
+    color: var(--orange);
+    background-color: var(--white);
+    cursor: pointer;
+    transition: all is-on-out 0.3s;
 }
